chtv/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: chtv
  name: chtv
  namespace: w3cie
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: chtv
  type: ClusterIP
