chtv/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chtv
  namespace: w3cie
spec:
  rules:
  - host: chtv.ch.tudelft.nl
    http:
      paths:
      - backend:
          serviceName: chtv
          servicePort: 80
  tls:
  - hosts:
    - chtv.ch.tudelft.nl
    secretName: ingress-ext-tls
